--- a/kv/practica5.kv
+++ b/kv/practica5.kv
@@ -32,11 +32,14 @@
                 orientation: 'vertical'
                 spacing: 14
                 size_hint_x: 0.5
+                height: self.minimum_height
 
                 Label:
                     text: "Intensidad de la lluvia (mm/h)"
                     color: (34/255, 34/255, 34/255, 1)
                     font_size: '16sp'
+                    size_hint_y: None
+                    height: 28
                 TextInput:
                     id: input_intensidad
                     hint_text: "Ej: 20"
@@ -44,11 +47,15 @@
                     background_color: (1,1,1,1)
                     foreground_color: (34/255, 34/255, 34/255, 1)
                     multiline: False
+                    size_hint_y: None
+                    height: 32
 
                 Label:
                     text: "Área del techo (m²)"
                     color: (34/255, 34/255, 34/255, 1)
                     font_size: '16sp'
+                    size_hint_y: None
+                    height: 28
                 TextInput:
                     id: input_area
                     hint_text: "Ej: 50"
@@ -56,11 +63,15 @@
                     background_color: (1,1,1,1)
                     foreground_color: (34/255, 34/255, 34/255, 1)
                     multiline: False
+                    size_hint_y: None
+                    height: 32
 
                 Label:
                     text: "Tiempo de captación (min)"
                     color: (34/255, 34/255, 34/255, 1)
                     font_size: '16sp'
+                    size_hint_y: None
+                    height: 28
                 TextInput:
                     id: input_tiempo
                     hint_text: "Ej: 30"
@@ -68,6 +79,8 @@
                     background_color: (1,1,1,1)
                     foreground_color: (34/255, 34/255, 34/255, 1)
                     multiline: False
+                    size_hint_y: None
+                    height: 32
 
             # Resultados y visualización a la derecha
             BoxLayout:
