--- a/kv/main.kv
+++ b/kv/main.kv
@@ -65,3 +65,10 @@
                 font_size: '20sp'
                 on_release: app.root.current = 'practica5'
 
+            Button:
+                text: "Práctica 6: Monitoreo y Control"
+                background_color: (46/255, 134/255, 222/255, 1)
+                color: (1, 1, 1, 1)
+                font_size: '20sp'
+                on_release: app.root.current = 'practica6_monitor'
+
