--- a/kv/main.kv
+++ b/kv/main.kv
@@ -59,16 +59,9 @@
                 on_release: app.root.current = 'practica4'
 
             Button:
-                text: "Práctica 5: Captación de agua lluvia"
+                text: "Práctica 5: Captación de agua de lluvia"
                 background_color: (46/255, 134/255, 222/255, 1)
                 color: (1, 1, 1, 1)
                 font_size: '20sp'
                 on_release: app.root.current = 'practica5'
-
-            Button:
-                text: "Práctica 6: Monitoreo y Control"
-                background_color: (46/255, 134/255, 222/255, 1)
-                color: (1, 1, 1, 1)
-                font_size: '20sp'
-                on_release: app.root.current = 'practica6_monitor'
 
